tests/golden/snapshots/render_instruction_matrix__dispatch_segment_single_no_args.snap
---
source: tests/golden/render_instruction_matrix.rs
expression: out
---
pub fn ping(ctx: Context<Ping>) -> Result<()> {
    instructions::ping::handler(ctx)
}
