tests/golden/snapshots/render_instruction_matrix__instructions_mod_segment_many_sorted_dedup.snap
---
source: tests/golden/render_instruction_matrix.rs
expression: out
---
pub mod close;
pub use close::*;
pub mod deposit;
pub use deposit::*;
pub mod initialize;
pub use initialize::*;
pub mod withdraw;
pub use withdraw::*;
