tests/golden/snapshots/render_instruction_matrix__instructions_mod_segment_single.snap
---
source: tests/golden/render_instruction_matrix.rs
expression: out
---
pub mod initialize;
pub use initialize::*;
